# CycleD

./: .gitignore  GAME.md  LICENSE.txt  README.md  THIRD_PARTY_LICENSES.md  addressCode.json  current.csv  daily.csv  hourly.csv  json_test.json  map.html  memo.txt  memo2.txt  memo3.txt  memo4.txt  pyproject.toml  requirements.txt  test.html  test.py  todo.md  関町_current.csv  関町_daily.csv  関町_hourly.csv  関町東_current.csv  関町東_daily.csv  関町東_hourly.csv
CycleD_project/: manage.py
CycleD_project/CycleD/: asgi.py  settings.py  urls.py
MyProject0/: manage.py
MyProject0/MyApp0/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
MyProject0/MyProject0/: asgi.py  settings.py  urls.py  wsgi.py
Tests/: current_location.html  geolocationAPI.html  geolocationAPI.js  map.html  test.py
customadmin/: magagement.md  manage.py
customadmin/AppManagement/: admin.py  models.py
customadmin/customadmin/: asgi.py  settings.py  urls.py  wsgi.py
cycled_project/: package-lock.json  requirements.txt  server.crt  server.csr  server.key
cycled_project/CycleD/: settings.py  urls.py
cycled_project/accounts/: adapters.py  admin.py  ap_scheduler.py  apps.py  context_processors.py  forms.py  models.py  signals.py  urls.py  views.py
cycled_project/config/: asgi.py  settings.py  urls.py  wsgi.py
cycled_project/diary/: admin.py  ap_scheduler.py  apps.py  auth_backends.py  diary_weather_report.py  diary_weather_report_new.py  direction.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py  weather_category.py  weather_report.py  wether_report.py  関町_current.csv  関町_daily.csv  関町_hourly.csv
cycled_project/games/: admin.py  models.py  (+3 more)
example/: geolocationAPI.html  geolocationAPI.js  test.py  test2.py  test3.py
subs/: __init__.py  test.py  weather_by_location.py  weather_report.py
(+489 files in other folders)
