[tool.poetry]
name = "mydjango"
version = "0.1.0"
description = ""
authors = ["UnchiFactory <153418263+UnchiFactory@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
geocoder = "^1.38.1"
pandas = "^2.2.2"
django = "^5.0.4"
django-bootstrap5 = "^24.1"
django-debug-toolbar = "^4.3.0"
pillow = "^10.3.0"
geopy = "^2.4.1"
beautifulsoup4 = "^4.12.3"
xlrd = "^2.0.1"
pydantic = "^2.7.1"
js2py = "^0.74"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
django-ratelimit = "^4.1.0"
ratelimit = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
